--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <a href=ex07-06.html#photo3>初秋的漫步－淡水閒情</a>
 
 <br>
-<audio src="media/001.mp3" autoplay />
+<audio src="media/001.mp3" controls/>
 
 
 
